CRUD tarifas da agência
