# app/Models/FareAttribute.php
@@ -6,6 +6,7 @@
 
 namespace App\Models;
 
+use App\Traits\EnumManipulation;
 use Carbon\Carbon;
 use Illuminate\Database\Eloquent\Collection;
 use Illuminate\Database\Eloquent\Model;
@@ -13,7 +14,7 @@ use Illuminate\Database\Eloquent\SoftDeletes;
 
 /**
  * Class FareAttribute
- * 
+ *
  * @property int $id
  * @property int $agency_id
  * @property float $price
@@ -24,7 +25,7 @@ use Illuminate\Database\Eloquent\SoftDeletes;
  * @property Carbon $created_at
  * @property Carbon $updated_at
  * @property string $deleted_at
- * 
+ *
  * @property Agency $agency
  * @property Collection|FareRule[] $fare_rules
  *
@@ -60,4 +61,20 @@ class FareAttribute extends Model
 	{
 		return $this->hasMany(FareRule::class, 'fare_id');
 	}
+
+    public function getEnumTransfersAttribute(){
+        return EnumManipulation::getEnumValues('fare_attributes', 'transfers');
+    }
+
+    public function getEnumKeyTransfersAttribute(){
+        return array_keys(EnumManipulation::getEnumValues('fare_attributes', 'transfers'), $this->transfers);
+    }
+
+    public function getCreatedAtAttribute($value) {
+        return Carbon::createFromTimestamp(strtotime($value))->timezone(config('app.timezone'))->toDateTimeString();
+    }
+
+    public function getUpdatedAtAttribute($value) {
+        return Carbon::createFromTimestamp(strtotime($value))->timezone(config('app.timezone'))->toDateTimeString();
+    }
 }
